[gd_scene load_steps=19 format=2]

[ext_resource path="res://RawResources/Sounds/Effects/building.ogg" type="AudioStream" id=1]
[ext_resource path="res://RawResources/Sounds/Effects/cash_register.ogg" type="AudioStream" id=2]
[ext_resource path="res://RawResources/Sounds/Effects/card_click.ogg" type="AudioStream" id=3]
[ext_resource path="res://RawResources/Sounds/Effects/discard_card.ogg" type="AudioStream" id=4]
[ext_resource path="res://RawResources/Sounds/Effects/draw_card_btn.ogg" type="AudioStream" id=5]
[ext_resource path="res://RawResources/Sounds/Effects/gather_wood.ogg" type="AudioStream" id=6]
[ext_resource path="res://RawResources/Sounds/Effects/heavy_snow.ogg" type="AudioStream" id=7]
[ext_resource path="res://RawResources/Sounds/Effects/hover.ogg" type="AudioStream" id=8]
[ext_resource path="res://RawResources/Sounds/Effects/ui_click.ogg" type="AudioStream" id=9]
[ext_resource path="res://RawResources/Sounds/Effects/people_screaming.ogg" type="AudioStream" id=10]
[ext_resource path="res://RawResources/Sounds/Effects/use_card.ogg" type="AudioStream" id=11]
[ext_resource path="res://RawResources/Sounds/Music/main_menu.ogg" type="AudioStream" id=12]
[ext_resource path="res://RawResources/Sounds/Music/autumn.ogg" type="AudioStream" id=13]
[ext_resource path="res://RawResources/Sounds/Music/spring.ogg" type="AudioStream" id=14]
[ext_resource path="res://RawResources/Sounds/Music/summer.ogg" type="AudioStream" id=15]
[ext_resource path="res://RawResources/Sounds/Music/winter.ogg" type="AudioStream" id=16]
[ext_resource path="res://Scripts/SoundNode.gd" type="Script" id=17]
[ext_resource path="res://RawResources/Sounds/Effects/mining.ogg" type="AudioStream" id=18]

[node name="Node" type="Node"]
script = ExtResource( 17 )

[node name="SoundEffectBuilding" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="SoundEffectCardClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="SoundEffectCashRegister" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="SoundEffectDiscardCard" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SoundEffectDrawCardBtn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="SoundEffectGatherWood" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="SoundEffectHeavySnow" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="SoundEffectHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="SoundEffectPeopleScreaming" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="SoundEffectUiClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="SoundEffectUseCard" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="MusicMainMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="MusicAutumn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="MusicSpring" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="MusicSummer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="MusicWinter" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="SoundEffectMining" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
